--- a/about.html
+++ b/about.html
@@ -36,13 +36,13 @@
      <ol>
          <li>
              <a href="#ort">Origins of the term</a>
-            <ol>
+            <ol type="a">
               <!-- I added target="_blank" because my website client would most likely prefer these hyperlinks to open another 
                 page. Also "type="a" gives validation error, only written for assignment otherwise, i'd use CSS-->
-               <li type="a"><a href="https://en.wikipedia.org/wiki/Spa#Bathing_in_Greek_and_Roman_times" target="_blank">Bathing in Greek and Roman times</a></li>
-               <li type="a"><a href="https://en.wikipedia.org/wiki/Spa#Bathing_in_medieval_times" target="_blank">Bathing in the Medieval times</a></li>
-               <li type="a"><a href="https://en.wikipedia.org/wiki/Spa#Bathing_in_the_18th_century" target="_blank">Bathing in the 18th century</a></li>
-               <li type="a"><a href="https://en.wikipedia.org/wiki/Spa#Bathing_in_the_19th_and_20th_centuries" target="_blank">Bathing in the 19th an 20th cebturies</a></li>
+               <li><a href="https://en.wikipedia.org/wiki/Spa#Bathing_in_Greek_and_Roman_times" target="_blank">Bathing in Greek and Roman times</a></li>
+               <li><a href="https://en.wikipedia.org/wiki/Spa#Bathing_in_medieval_times" target="_blank">Bathing in the Medieval times</a></li>
+               <li><a href="https://en.wikipedia.org/wiki/Spa#Bathing_in_the_18th_century" target="_blank">Bathing in the 18th century</a></li>
+               <li><a href="https://en.wikipedia.org/wiki/Spa#Bathing_in_the_19th_and_20th_centuries" target="_blank">Bathing in the 19th an 20th cebturies</a></li>
             </ol>
          </li>
          <li>
@@ -103,7 +103,7 @@
     <hr>
  <footer>
      <p>
-        Copyright © 2019 Canadian Business College - HTML major assignment - created by: Your Full Name - All rights
+        Copyright © 2019 Canadian Business College - HTML major assignment - created by: Randy Anderson - All rights
         reserved
      </p>
  </footer>
