--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <hr>
  <footer>
      <p>
-        Copyright © 2019 Canadian Business College - HTML major assignment - created by: Your Full Name - All rights
+        Copyright © 2019 Canadian Business College - HTML major assignment - created by: Randy Anderson - All rights
         reserved
      </p>
  </footer>
